<resources>
    <string name="app_name">LikeClock2ScrollviewsDemo</string>
    <string name="tv1">01</string>
    <string name="tv2">02</string>
    <string name="tv3">03</string>
    <string name="tv4">04</string>
    <string name="tv5">05</string>
    <string name="tv6">06</string>
    <string name="tv7">07</string>
    <string name="tv8">08</string>
    <string name="tv9">09</string>
</resources>
