<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="com.mdoery.likeclock2scrollviewsdemo.LikeClock2ScrollviewsDemo">
    <LinearLayout
        android:id="@+id/innerPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:background="@drawable/ll_border"
        >
        <!-- topPanel occupies the top 25% of the view -->
        <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_weight="0.25"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:background="@drawable/ll_border">

            <TextView
                android:id="@+id/txtFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="feedback"/>
        </LinearLayout>
        <!-- middlePanel occupies the middle 50% of the view -->
        <LinearLayout
            android:id="@+id/middlePanel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:background="@drawable/ll_border">
            <ScrollView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:scrollY="26sp"
                android:scrollbars="none"
            >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv1"/>
                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv2"/>
                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv3"/>
                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv4"/>
                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv5"/>
                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv6"/>
                    <TextView
                        android:id="@+id/tv7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv7"/>
                    <TextView
                        android:id="@+id/tv8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv8"/>
                    <TextView
                        android:id="@+id/tv9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="44sp"
                        android:includeFontPadding="false"
                        android:text="@string/tv9"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <!-- Similar to topPanel, bottomPanel occupies the bottom 25% of the view -->
        <LinearLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp"
            android:background="@drawable/ll_border">

            <ToggleButton
                android:id="@+id/startToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="start"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>